# ChAI

./: README.md
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/models/: model.py
backend/src/utils/: db_operations.py  db_test.py  handler_utils.py  logger.py  mongodb.py
docs/: api-spec.yml
