[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "vigneshkumarv",email = "vigneshkumar20eceskct@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "motor (>=3.7.0,<4.0.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "mongoose (>=0.0.1,<0.0.2)",
    "dotenv (>=0.9.9,<0.10.0)",
    "beanie (>=1.29.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
